--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,13 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="shortcut icon" href="/img/favicon/favicon.ico">
-    <!--/script.
-    document.write('<script src="http://'
-            + (location.host || 'localhost').split(':')[0]
-            + ':35729/livereload.js"></'
-            + 'script>')
-    
-    --><!-- bower:js -->
+    <script>
+      document.write('<script src="http://'
+              + (location.host || 'localhost').split(':')[0]
+              + ':35729/livereload.js"></'
+              + 'script>')
+      
+    </script><!-- bower:js -->
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script src="bower_components/ev-emitter/ev-emitter.js"></script>
 <script src="bower_components/imagesloaded/imagesloaded.js"></script>
@@ -29,6 +29,8 @@
     <script src="bower_components/angular/angular.min.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/angular-responsive-tables/release/angular-responsive-tables.js"></script>
+    <!--script(src="bower_components/responsive-tables-js/dist/responsivetables.js")-->
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script><!-- bower:css -->
 <link rel="stylesheet" href="bower_components/superfish/dist/css/superfish.css" />
 <!-- endbower -->
@@ -36,54 +38,57 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css">
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body id="body">
-    <!--Created by salimike on 18.03.16.
-    -->
-    <div class="header">
-      <div class="header__corner"><i class="fa fa-bus"></i></div>
-      <div class="header__switcher -hidden">
-        <div class="background"></div>
-        <ul class="header__panel">
-          <li class="header__item"><a href="#/bus"><span class="header__button"><span class="header__buttonIconBG">
-                  <div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></a></li>
-          <li class="header__item"><a href="#/busstop"><span class="header__button"><span class="header__buttonIconBG">
-                  <div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></a></li>
-          <li class="header__item"><span class="header__button"><span class="header__buttonIconBG">
-                <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></li>
-          <li class="header__item"><a href="#/user"><span class="header__button"><span class="header__buttonIconBG">
-                  <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></a></li>
-          <li class="header__item"><span class="header__button"><span class="header__buttonIconBG">
-                <div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></li>
-        </ul>
+  <body>
+    <div class="headerholder">
+      <!--Created by salimike on 18.03.16.
+      -->
+      <div class="header">
+        <div class="header__corner"><i class="fa fa-bus"></i></div>
+        <div class="header__switcher -hidden">
+          <div class="background"></div>
+          <ul class="header__panel">
+            <li class="header__item"><a href="#/bus"><span class="header__button"><span class="header__buttonIconBG">
+                    <div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></a></li>
+            <li class="header__item"><a href="#/busstop"><span class="header__button"><span class="header__buttonIconBG">
+                    <div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></a></li>
+            <li class="header__item"><a href="#/roads"><span class="header__button"><span class="header__buttonIconBG">
+                    <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></a></li>
+            <li class="header__item"><a href="#/user"><span class="header__button"><span class="header__buttonIconBG">
+                    <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></a></li>
+            <li class="header__item"><a href="#/controls"><span class="header__button"><span class="header__buttonIconBG">
+                    <div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="headerLogo"><span>MPK OLSZTYN</span></div>
+      <div class="headerProfile">
+        <div class="headerProfile__corner"><i class="fa fa-gears"></i></div>
+        <div class="headerProfile__switcher -hidden">
+          <div class="background"></div>
+          <ul class="headerProfile__panel">
+            <li class="headerProfile__item"><a href="#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                    <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></a></li>
+            <li class="headerProfile__item"><a href="#/register"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                    <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></a></li>
+            <li class="headerProfile__item"><a href="#/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                    <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></a></li>
+            <li class="headerProfile__item"><a href="#/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                    <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></a></li>
+            <li class="headerProfile__item"><a href="#/info"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                    <div class="headerProfile__buttonIcon fa fa-info-circle"></div></span>Informacje</span></a></li>
+            <li class="headerProfile__item"><a href="#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                    <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></a></li>
+          </ul>
+        </div>
       </div>
     </div>
-    <div class="headerLogo"><span>MPK OLSZTYN</span></div>
-    <div class="headerProfile">
-      <div class="headerProfile__corner"><i class="fa fa-gears"></i></div>
-      <div class="headerProfile__switcher -hidden">
-        <div class="background"></div>
-        <ul class="headerProfile__panel">
-          <li class="headerProfile__item"><a href="#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                  <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></a></li>
-          <li class="headerProfile__item"><a href="#/register"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                  <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></a></li>
-          <li class="headerProfile__item"><a href="#/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                  <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></a></li>
-          <li class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></li>
-          <li class="headerProfile__item"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                <div class="headerProfile__buttonIcon fa fa-info-circle"></div></span>Informacje</span></li>
-          <li class="headerProfile__item"><a href="#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                  <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></a></li>
-        </ul>
-      </div>
+    <div class="panels">
+      <div ng-view></div>
+      <div class="panels__close"><a href="#/"><i class="fa fa-angle-double-left"></i></a></div>
     </div>
-    <div id="containerDrag">
+    <div class="wrapper">
       <div class="googleMaps">
         <div id="googleMaps" class="googleMaps__API"></div>
-      </div>
-      <div class="dragger">
-        <div ng-view></div>
       </div>
     </div>
     <script src="app.js"></script>
