--- a/app/panelDodajAutobus.html
+++ b/app/panelDodajAutobus.html
@@ -1,39 +1,39 @@
 
-<div class="panelDodajAutobus panel">
+<div class="panelDodajAutobus">
   <div class="panelDodajAutobus__title">Dodaj Autobus</div>
+  <div class="panelDodajAutobus__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span><a href="#/home/">Zarządzanie Autobusami</a></span><span class="-active"><a href="#/home/add">Dodaj Autobus</a></span></div>
   <div class="panelDodajAutobus__wrapper">
-    <div class="panelDodajAutobus__content">
-      <div class="panelDodajAutobus__content__Title">Dane Autobusu</div>
-      <div class="panelDodajAutobus__content__form">
-        <div class="panelDodajAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
-          <input placeholder="Podaj Nr. Rejestracyjny"/>
-        </div>
-        <div class="panelDodajAutobus__content__form__item"><span class="item">Numer VIN</span>
-          <input placeholder="Podaj Nr. VIN"/>
-        </div>
-        <div class="panelDodajAutobus__content__form__item"><span class="item">Typ Autobusu</span>
-          <select>
-            <option value="0">Normalny</option>
-            <option value="1">Przegubowy</option>
-          </select>
-        </div>
-        <div class="panelDodajAutobus__content__form__item"><span class="item">Czy ma Biletomat?</span>
-          <select>
-            <option value="0">Nie</option>
-            <option value="1">Tak</option>
-          </select>
-        </div>
-        <div class="panelDodajAutobus__content__form__item"><span class="item">Status</span>
-          <select>
-            <option value="0">Aktywny</option>
-            <option value="1">W zajezdni</option>
-            <option value="2">W serwisie</option>
-          </select>
-        </div>
+    <div class="panelDodajAutobus__subtitle">Dodawanie pojazdu do floty</div>
+    <div class="panelDodajAutobus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
+    <div class="panelDodajAutobus__content__form">
+      <div class="panelDodajAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
+        <input placeholder="Podaj Nr. Rejestracyjny"/>
+      </div>
+      <div class="panelDodajAutobus__content__form__item"><span class="item">Numer VIN</span>
+        <input placeholder="Podaj Nr. VIN"/>
+      </div>
+      <div class="panelDodajAutobus__content__form__item"><span class="item">Typ Autobusu</span>
+        <select>
+          <option value="0">Normalny</option>
+          <option value="1">Przegubowy</option>
+        </select>
+      </div>
+      <div class="panelDodajAutobus__content__form__item"><span class="item">Czy ma Biletomat?</span>
+        <select>
+          <option value="0">Nie</option>
+          <option value="1">Tak</option>
+        </select>
+      </div>
+      <div class="panelDodajAutobus__content__form__item"><span class="item">Status</span>
+        <select>
+          <option value="0">Aktywny</option>
+          <option value="1">W zajezdni</option>
+          <option value="2">W serwisie</option>
+        </select>
       </div>
     </div>
     <div class="panelDodajAutobus__navigation">
       <button class="green panelDodajAutobus__navigation__item green">Dodaj Autobus</button><a href="#/bus" class="panelDodajAutobus__navigation__item gray -abort">Anuluj</a>
     </div>
-  </div><a href="#/"><span class="panelDodajAutobus__close"><span class="panelDodajAutobus__icon fa fa-times"></span></span></a>
+  </div>
 </div>
