--- a/app/panelDodajPrzystanek.html
+++ b/app/panelDodajPrzystanek.html
@@ -1,32 +1,38 @@
 
-<div class="panelDodajPrzystanek panel">
+<div class="panelDodajPrzystanek">
   <div class="panelDodajPrzystanek__title">Dodaj Przystanek</div>
+  <div class="panelDodajPrzystanek__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span><a href="#/busstop">Zarządzanie Autobusami</a></span><span class="-active"><a href="#/busstop/add">Dodaj Przystanek</a></span></div>
   <div class="panelDodajPrzystanek__wrapper">
-    <div class="panelDodajPrzystanek__content">
-      <div class="panelDodajPrzystanek__content__Title">Dane Przystanku</div>
-      <div class="panelDodajPrzystanek__content__form">
-        <div class="panelDodajPrzystanek__content__form__item"><span class="item">Nazwa przystanku</span>
-          <input placeholder="Podaj nazwę przystanku"/>
-        </div>
-        <div class="panelDodajPrzystanek__content__form__item"><span class="item">Lokalizacja</span>
-          <input placeholder="Podaj lokalizackje"/>
-        </div>
-        <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma biletomat?</span>
-          <select>
-            <option value="0">Nie</option>
-            <option value="1">Tak</option>
-          </select>
-        </div>
-        <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma kiosk?</span>
-          <select>
-            <option value="0">Nie</option>
-            <option value="1">Tak</option>
-          </select>
-        </div>
+    <div class="panelDodajPrzystanek__subtitle">Dodawanie przystankow floty</div>
+    <div class="panelDodajPrzystanek__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
+    <div class="panelDodajPrzystanek__content__form">
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Nazwa przystanku</span>
+        <input placeholder="Podaj nazwe przystanku"/>
+      </div>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Lokalizacja</span>
+        <input placeholder="Podaj ulice"/>
+      </div>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Współrzędne X</span>
+        <input placeholder="Podaj koordynat X"/>
+      </div>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Współrzędne Y</span>
+        <input placeholder="Podaj koordynat Y"/>
+      </div>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma biletomat?</span>
+        <select>
+          <option value="0">Nie</option>
+          <option value="1">Tak</option>
+        </select>
+      </div>
+      <div class="panelDodajPrzystanek__content__form__item"><span class="item">Czy ma kiosk?</span>
+        <select>
+          <option value="0">Nie</option>
+          <option value="1">Tak</option>
+        </select>
       </div>
     </div>
     <div class="panelDodajPrzystanek__navigation">
-      <button class="panelDodajPrzystanek__navigation__item green">Dodaj Autobus</button><a href="#/busstop" class="panelDodajPrzystanek__navigation__item gray -abort">Anuluj</a>
+      <button class="green panelDodajPrzystanek__navigation__item green">Dodaj Autobus</button><a href="#/busstop" class="panelDodajPrzystanek__navigation__item gray -abort">Anuluj</a>
     </div>
-  </div><a href="#/"><span class="panelDodajPrzystanek__close"><span class="panelDodajPrzystanek__icon fa fa-times"></span></span></a>
+  </div>
 </div>
