--- a/app/panelAutobusy.html
+++ b/app/panelAutobusy.html
@@ -1,7 +1,7 @@
 
 <div class="panelAutobusy">
   <div class="panelAutobusy__title">Zarządzanie autobusami</div>
-  <div class="panelAutobusy__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="#/home/">Zarządzanie Autobusami</a></span></div>
+  <div class="panelAutobusy__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="#/bus">Zarządzanie Autobusami</a></span></div>
   <div class="panelAutobusy__wrapper">
     <div class="panelAutobusy__subtitle">Flota Autobusów</div>
     <div class="panelAutobusy__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
