--- a/app/panelDodajAutobus.html
+++ b/app/panelDodajAutobus.html
@@ -1,7 +1,7 @@
 
 <div class="panelDodajAutobus">
   <div class="panelDodajAutobus__title">Dodaj Autobus</div>
-  <div class="panelDodajAutobus__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span><a href="#/home/">Zarządzanie Autobusami</a></span><span class="-active"><a href="#/home/add">Dodaj Autobus</a></span></div>
+  <div class="panelDodajAutobus__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span><a href="#/bus">Zarządzanie Autobusami</a></span><span class="-active"><a href="#/bus/add">Dodaj Autobus</a></span></div>
   <div class="panelDodajAutobus__wrapper">
     <div class="panelDodajAutobus__subtitle">Dodawanie pojazdu do floty</div>
     <div class="panelDodajAutobus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
