--- a/app/panelPrzystanki.html
+++ b/app/panelPrzystanki.html
@@ -1,52 +1,55 @@
 
-<div class="panelPrzystanki panel">
-  <div class="panelPrzystanki__title">Panel Zarządzania Przystankami</div>
+<div class="panelPrzystanki">
+  <div class="panelPrzystanki__title">Zarządzanie przystankami</div>
+  <div class="panelPrzystanki__fastTravel"><span><a href="#/"><i class="fa fa-home"></i>Home</a></span><span class="-active"><a href="#/busstop">Zarządzanie Przystankami</a></span></div>
   <div class="panelPrzystanki__wrapper">
-    <div class="panelPrzystanki__content">
-      <div class="panelPrzystanki__content__Title">Lista Przystanków</div>
-      <div class="panelPrzystanki__content__Filtr">
-        <div class="panelPrzystanki__content__Filtr__item">
-          <input placeholder="Szukaj przystanku"/>
-        </div>
-        <div class="panelPrzystanki__content__Filtr__item">
-          <input placeholder="Szukaj ulicy"/>
-          <!--input(placeholder="Typ autobusu")-->
-        </div>
-        <div class="panelPrzystanki__content__Filtr__item check">
-          <input type="checkbox" id="czyprzystanekmabiletomat"/>
-          <label for="czyprzystanekmabiletomat"></label>
-          <p>Biletomat</p>
-        </div>
-        <div class="panelPrzystanki__content__Filtr__item check">
-          <input type="checkbox" id="czyprzystanekmakiosk"/>
-          <label for="czyprzystanekmakiosk"></label>
-          <p>Kiosk</p>
-        </div>
+    <div class="panelPrzystanki__subtitle">Przystanki floty</div>
+    <div class="panelPrzystanki__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
+    <div class="panelPrzystanki__navigation"><a href="#/busstop/add" class="panelPrzystanki__navigation__item">Dodaj Przystanek</a></div>
+    <div class="panelPrzystanki__filtrs">
+      <div class="panelPrzystanki__filtr">
+        <label>Nazwa przystanku</label>
+        <input placeholder="Szukaj Przystanek..."/>
       </div>
-      <div class="panelPrzystanki__contentList">
-        <div class="panelList">
-          <div class="panelList__header">
-            <div class="panelList__headeritem">Nazwa przystanku</div>
-            <div class="panelList__headeritem">Ulica</div>
-            <div class="panelList__headeritem">Biletomat</div>
-            <div class="panelList__headeritem">Kiosk</div>
-            <div class="panelList__headeritem">Szczegóły</div>
-          </div>
-          <div id="GetBusstopList" class="panelPrzystanki__list panelList__content">
-            <div class="panelList__item">
-              <div class="panelList__itemCell">Przykładowa</div>
-              <div class="panelList__itemCell">Przykładowa</div>
-              <div class="panelList__itemCell">
-                <div class="fa fa-times-circle-o"></div>
-              </div>
-              <div class="panelList__itemCell">
-                <div class="fa fa-times-circle-o"></div>
-              </div><a href="#/busstop/show" class="panelList__itemCell">Zobacz</a>
-            </div>
-          </div>
-        </div>
+      <div class="panelPrzystanki__filtr">
+        <label>Ulica</label>
+        <input placeholder="Ulica..."/>
+      </div>
+      <div class="panelPrzystanki__filtr">
+        <label>Biletomat</label>
+        <input type="checkbox" id="czyBiletomat"/>
+        <label for="czyBiletomat" class="-biletomat"></label>
+      </div>
+      <div class="panelPrzystanki__filtr">
+        <label>Kiosk</label>
+        <input type="checkbox" id="czyKiosk"/>
+        <label for="czyKiosk" class="-biletomat"></label>
+      </div>
+      <div class="panelPrzystanki__table">
+        <table wt-responsive-table="wt-responsive-table" class="responsive">
+          <tr>
+            <th>Nazwa przystanku</th>
+            <th>Ulica</th>
+            <th>Biletomat</th>
+            <th>Kiosk</th>
+            <th>Zarządzanie</th>
+          </tr>
+          <tr>
+            <td>123456789</td>
+            <td>Normalny</td>
+            <td>Tak</td>
+            <td>Tak</td>
+            <td><a href="#" class="navigation"><i class="ionicons ion-ios-location"></i></a><a href="#" class="navigation"><i class="ionicons ion-edit"></i></a><a href="#" class="navigation"><i class="ionicons ion-android-delete -red"></i></a></td>
+          </tr>
+          <tr>
+            <td>..</td>
+            <td>..</td>
+            <td>..</td>
+            <td>..</td>
+            <td>..</td>
+          </tr>
+        </table>
       </div>
     </div>
-    <div class="panelPrzystanki__navigation"><a href="#/busstop/add" class="panelPrzystanki__navigation__item">Dodaj Przystanek</a></div>
-  </div><a href="#/"><span class="panelPrzystanki__close"><span class="panelPrzystanki__icon fa fa-times"></span></span></a>
+  </div>
 </div>
