Wyswietlanie listy autobusów

--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,10 @@
     <script src="bower_components/angular-route/angular-route.min.js"></script>
     <script src="bower_components/angular-responsive-tables/release/angular-responsive-tables.js"></script>
     <!--script(src="bower_components/responsive-tables-js/dist/responsivetables.js")-->
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script><!-- bower:css -->
-<link rel="stylesheet" href="bower_components/superfish/dist/css/superfish.css" />
-<!-- endbower -->
+    <!--script(src="//code.jquery.com/ui/1.11.4/jquery-ui.js")-->
+    <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/superfish/dist/css/superfish.css" />
+    <!-- endbower -->
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.2/css/select2.min.css">
     <link rel="stylesheet" href="css/main.css">
