--- a/app/panelWyswietlAutobus.html
+++ b/app/panelWyswietlAutobus.html
@@ -28,7 +28,7 @@
         <p>X Y</p>
       </div>
     </div>
-    <div class="panelWyswietlAutobus__subtitle">Aktualny stan autobusu</div>
+    <div class="panelWyswietlAutobus__subtitle">Edycja autobusu</div>
     <div class="panelWyswietlAutobus__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse vitae euismod lorem, vel commodo orci.</div>
     <div class="panelWyswietlAutobus__content__form">
       <div class="panelWyswietlAutobus__content__form__item"><span class="item">Numer Rejestracyjny</span>
